--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "exec-file-sync": "^2.0.1",
+    "module-deps": "^4.0.5",
     "multipipe": "^0.3.0",
-    "object-assign": "^4.0.1"
+    "object-assign": "^4.0.1",
+    "resolve": "^1.1.6",
+    "through2": "^2.0.0"
   },
   "devDependencies": {
-    "tape": "^4.4.0",
-    "through2": "^2.0.0"
+    "tape": "^4.4.0"
   },
   "license": "MIT"
 }
